Prevent dates from wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 .post-date {
     color: #666;
     font-size: smaller;
+    white-space: nowrap;
 }
 div.voting-tools {
     float: right;
